@@ -1,5 +1,10 @@
 2010-07-27  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	* term.c (Qspace, QCalign_to, QCwidth): Remove declarations.
+	(encode_terminal_code, produce_composite_glyph): Remove unused variables.
+	(set_tty_color_mode, term_mouse_highlight, term_get_fkeys): Remove
+	local extern declarations.
+
 	* xmenu.c: Do not included lwlib.h, not needed.
 
 	* m/iris4d.h (XUINT, XSET): Remove, not needed.
